Agrega prueba de concepto de librerias dinamicas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,27 @@ project(taller_micromachines)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS "-Wall -Werror -pedantic -pedantic-errors -ggdb -DDEBUG -fno-inline -pthread")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}")
 
 include_directories(include/)
 include_directories(libs/)
 include_directories(/usr/include/lua5.3)
+
+########## SERVER ##########
+
+########## CLIENT ##########
+
+########## MODS ##########
+add_library(HelloWorld SHARED
+        mods/libHelloWorld.cpp
+        )
+
+add_executable(mods_tests
+        mods/modsTests.cpp
+        )
+
+target_link_libraries(mods_tests HelloWorld ${CMAKE_DL_LIBS})
+########## SCRIPTS ##########
 
 add_executable(scripts_tests
         scripts/helloWorld.lua
@@ -17,10 +34,8 @@ add_executable(scripts_tests
         )
 target_link_libraries(scripts_tests lua5.3)
 
-
-###################################
 ########## CPPLINT STUFF ##########
-###################################
+
 set(CPPLINT_FILTER_OPTIONS
         "-,+build/class,+build/deprecated,+build/include_what_you_use,+build/namespaces,+build/printf_format,\
         +readability/braces,+readability/check,+readability/fn_size,\
@@ -38,3 +53,4 @@ add_custom_target(lint_headers
         )
 
 add_dependencies(scripts_tests lint_headers)
+add_dependencies(mods_tests lint_headers)
