Compila el servidor linkeando a la libreria box2d

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,33 @@ include_directories(/usr/include/lua5.3)
 
 ########## SERVER ##########
 
+FILE(GLOB_RECURSE box2d_src
+        ${PROJECT_SOURCE_DIR}/libs/Box2D/*.cpp
+        ${PROJECT_SOURCE_DIR}/libs/Box2D/*.h
+)
+add_library(box2d STATIC
+        ${box2d_src})
+
+add_executable(server_test
+        server/simulator.cpp
+        server/track.cpp server/track.h
+        server/car.cpp server/car.h
+        server/circuit_generator.cpp server/circuit_generator.h
+)
+
+target_link_libraries(server_test box2d)
 ########## CLIENT ##########
 
 add_executable(client_test
-        client/main.cpp client/SDLWindow.cpp client/SDLWindow.h client/SDLException.cpp client/SDLException.h client/SDLTextureLoader.cpp client/SDLTextureLoader.h client/SDLTexture.cpp client/SDLTexture.h client/Area.cpp client/Area.h client/Car.cpp client/Car.h client/CarFrameResolver.cpp client/CarFrameResolver.h client/Boulder.cpp client/Boulder.h)
+        client/main.cpp
+        client/SDLWindow.cpp client/SDLWindow.h
+        client/SDLException.cpp client/SDLException.h
+        client/SDLTextureLoader.cpp client/SDLTextureLoader.h
+        client/SDLTexture.cpp client/SDLTexture.h
+        client/Area.cpp client/Area.h
+        client/Car.cpp client/Car.h
+        client/CarFrameResolver.cpp client/CarFrameResolver.h
+        client/Boulder.cpp client/Boulder.h)
 
 target_link_libraries(client_test SDL2 SDL2_image)
 
