Divide todo en distintos cmakes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,66 +8,11 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}")
 
 include_directories(include/)
 include_directories(libs/)
-include_directories(/usr/include/lua5.3)
 
-########## SERVER ##########
-
-FILE(GLOB_RECURSE box2d_src
-        ${PROJECT_SOURCE_DIR}/libs/Box2D/*.cpp
-        ${PROJECT_SOURCE_DIR}/libs/Box2D/*.h
-)
-add_library(box2d STATIC ${box2d_src})
-
-add_executable(server_test
-        server/simulator.cpp
-        server/track.cpp server/track.h
-        server/car.cpp server/car.h
-        server/circuit_generator.cpp server/circuit_generator.h
-        server/event_listener.cpp server/event_listener.h
-        server/car_handler.cpp server/car_handler.h
-        server/event_handler.cpp server/event_handler.h)
-
-target_link_libraries(server_test box2d)
-
-########## CLIENT ##########
-
-add_executable(client_test
-        client/main.cpp
-        client/SDLWindow.cpp client/SDLWindow.h
-        client/SDLException.cpp client/SDLException.h
-        client/SDLTextureLoader.cpp client/SDLTextureLoader.h
-        client/SDLTexture.cpp client/SDLTexture.h
-        client/Area.cpp client/Area.h
-        client/Car.cpp client/Car.h
-        client/CarFrameResolver.cpp client/CarFrameResolver.h
-        client/Boulder.cpp client/Boulder.h
-        client/Renderizable.h
-        client/Oil.cpp client/Oil.h
-        client/Mud.cpp client/Mud.h client/Camara.cpp client/Camara.h client/StaticRenderizable.cpp client/StaticRenderizable.h client/WorldEntities.cpp client/WorldEntities.h)
-
-target_link_libraries(client_test SDL2 SDL2_image)
-
-########## MODS ##########
-add_library(HelloWorld SHARED
-        mods/libHelloWorld.cpp)
-
-add_executable(mods_tests
-        mods/modsTests.cpp
-        )
-
-target_link_libraries(mods_tests HelloWorld ${CMAKE_DL_LIBS})
-
-########## SCRIPTS ##########
-
-add_executable(scripts_tests
-        scripts/helloWorld.lua
-        scripts/scriptsTests.cpp
-        scripts/LuaFile.cpp scripts/LuaFile.h
-        scripts/AIScript.h
-        )
-target_link_libraries(scripts_tests lua5.3)
-
-########## CPPLINT_STUFF ##########
+add_subdirectory(scripts)
+add_subdirectory(mods)
+add_subdirectory(client)
+add_subdirectory(server)
 
 set(CPPLINT_FILTER_OPTIONS
         "-,+build/class,+build/deprecated,+build/include_what_you_use,+build/namespaces,+build/printf_format,\
@@ -100,11 +45,11 @@ add_custom_target(lint_scripts
         COMMAND cpplint --extensions=h,hpp,c,cpp --filter=${CPPLINT_FILTER_OPTIONS} --linelength=100 --recursive "${CMAKE_CURRENT_SOURCE_DIR}/scripts/"
         )
 
-add_dependencies(scripts_tests lint_headers)
-add_dependencies(scripts_tests lint_scripts)
-add_dependencies(mods_tests lint_headers)
-add_dependencies(mods_tests lint_mods)
-add_dependencies(client_test lint_headers)
-add_dependencies(client_test lint_client)
-add_dependencies(server_test lint_headers)
-add_dependencies(server_test lint_server)
+#add_dependencies(scripts_test lint_headers)
+#add_dependencies(scripts_test lint_scripts)
+#add_dependencies(mods_test lint_headers)
+#add_dependencies(mods_test lint_mods)
+#add_dependencies(client_test lint_headers)
+#add_dependencies(client_test lint_client)
+#add_dependencies(server_test lint_headers)
+#add_dependencies(server_test lint_server)
