--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -3,8 +3,8 @@ include_directories(/usr/include/lua5.3)
 add_executable(scripts_test
         helloWorld.lua
         scriptsTests.cpp
-        LuaFile.cpp LuaFile.h
-        AIScript.h
+        LuaFile.cpp ../include/scripts/LuaFile.h
+        ../include/scripts/AIScript.h
         )
 
 target_link_libraries(scripts_test lua5.3)
