--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -7,11 +7,11 @@ add_library(box2d STATIC ${box2d_src})
 
 add_executable(server_test
         simulator.cpp
-        track.cpp track.h
-        car.cpp car.h
-        circuit_generator.cpp circuit_generator.h
-        event_listener.cpp event_listener.h
-        car_handler.cpp car_handler.h
-        event_handler.cpp event_handler.h)
+        track.cpp ../include/server/track.h
+        car.cpp ../include/server/car.h
+        circuit_generator.cpp ../include/server/circuit_generator.h
+        event_listener.cpp ../include/server/event_listener.h
+        car_handler.cpp ../include/server/car_handler.h
+        event_handler.cpp ../include/server/event_handler.h)
 
 target_link_libraries(server_test box2d)
