Agrega regla para lo comun entre server/client

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -13,12 +13,7 @@ add_executable(server_test
         event_listener.cpp ../include/server/event_listener.h
         car_handler.cpp ../include/server/car_handler.h
         event_handler.cpp ../include/server/event_handler.h
-
-        ../common/Communication.cpp ../include/common/Communication.h
-        ../common/MoveSerializer.cpp ../include/common/MoveSerializer.h
-        ../common/StateSerializer.cpp ../include/common/StateSerializer.h
-        ../common/Socket.cpp ../include/common/Socket.h
-        ../include/common/MoveType.h
-        ClientProxy.cpp ../include/server/ClientProxy.h ../include/common/json.h ClientAccepter.cpp ../include/server/ClientAccepter.h)
+        ClientProxy.cpp ../include/server/ClientProxy.h
+        ClientAccepter.cpp ../include/server/ClientAccepter.h)
 
 target_link_libraries(server_test box2d)
