--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -6,7 +6,7 @@ FILE(GLOB_RECURSE box2d_src
 add_library(box2d STATIC ${box2d_src})
 
 add_executable(server_test
-        track.cpp ../include/server/track.h
+        Track.cpp ../include/server/Track.h
         Car.cpp ../include/server/Car.h
         circuit_generator.cpp ../include/server/circuit_generator.h
         CarHandler.cpp ../include/server/CarHandler.h
