--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ add_library(common STATIC
         include/common/json.h
         include/common/MoveType.h
         common/ProtectedQueue.cpp include/common/ProtectedQueue.h
-        common/RacesSerializer.cpp include/common/RacesSerializer.h common/TrackSerializer.cpp include/common/TrackSerializer.h common/ProtectedQueueState.cpp include/common/ProtectedQueueState.h include/common/Constants.h common/ClosedQueueException.cpp common/ClosedQueueException.h)
+        common/RacesSerializer.cpp include/common/RacesSerializer.h common/TrackSerializer.cpp include/common/TrackSerializer.h common/ProtectedQueueState.cpp include/common/ProtectedQueueState.h include/common/Constants.h common/ClosedQueueException.cpp include/common/ClosedQueueException.h common/ProtectedQueueUpdate.cpp include/common/ProtectedQueueUpdate.h)
 
 target_link_libraries(server_test common)
 target_link_libraries(client_test common)
