Agrega support para multiples bots

--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -18,12 +18,11 @@ add_executable(client_test
         sdl_wrappers/StaticRenderizable.cpp ../include/client/StaticRenderizable.h
         WorldEntities.cpp ../include/client/WorldEntities.h
         Launcher.cpp
-        scripts/bot.lua
-        scripts/LuaFile.cpp ../../include/client/LuaFile.h
+        LuaFile.cpp ../../include/client/LuaFile.h
         ../../include/client/AIScript.h
         ServerProxy.cpp ../include/client/ServerProxy.h ThStateReceiver.cpp ../include/client/ThStateReceiver.h ThFrameDrawer.cpp ../include/client/ThFrameDrawer.h
         sdl_wrappers/Audio.cpp ../include/client/Audio.h
-        entities/StraightRoad.cpp ../include/client/StraightRoad.h entities/CurvedRoad.cpp ../include/client/CurvedRoad.h entities/Boost.cpp ../include/client/Boost.h entities/Heart.cpp ../include/client/Heart.h CarLivesDrawer.cpp ../include/client/CarLivesDrawer.h scripts/AIScript.cpp sdl_wrappers/SDLText.cpp ../include/client/SDLText.h entities/MudSplatter.cpp entities/MudSplatter.h)
+        entities/StraightRoad.cpp ../include/client/StraightRoad.h entities/CurvedRoad.cpp ../include/client/CurvedRoad.h entities/Boost.cpp ../include/client/Boost.h entities/Heart.cpp ../include/client/Heart.h CarLivesDrawer.cpp ../include/client/CarLivesDrawer.h AIScript.cpp sdl_wrappers/SDLText.cpp ../include/client/SDLText.h entities/MudSplatter.cpp entities/MudSplatter.h)
 
 target_link_libraries(client_test SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 target_link_libraries(client_test Qt5::Widgets)
