--- a/client/CMakeLists.txt
+++ b/client/CMakeLists.txt
@@ -22,8 +22,13 @@ add_executable(client_test
         ../../include/client/AIScript.h
         ServerProxy.cpp ../include/client/ServerProxy.h ThStateReceiver.cpp ../include/client/ThStateReceiver.h ThFrameDrawer.cpp ../include/client/ThFrameDrawer.h
         sdl_wrappers/Audio.cpp ../include/client/Audio.h
+        entities/StraightRoad.cpp ../include/client/StraightRoad.h entities/CurvedRoad.cpp ../include/client/CurvedRoad.h entities/Boost.cpp ../include/client/Boost.h entities/Heart.cpp ../include/client/Heart.h CarLivesDrawer.cpp ../include/client/CarLivesDrawer.h AIScript.cpp sdl_wrappers/SDLText.cpp ../include/client/SDLText.h entities/MudSplatter.cpp ../include/client/MudSplatter.h
+        ffmpeg/CodecContext.cpp ../include/client/CodecContext.h ffmpeg/Consumer.cpp ../include/client/Consumer.h ffmpeg/FormatOutput.cpp ../include/client/FormatOutput.h
+        ffmpeg/Frame.cpp ../include/client/Frame.h ffmpeg/Output.cpp ../include/client/Output.h ffmpeg/Packet.cpp ../include/client/Packet.h ffmpeg/SwsContext.cpp ../include/client/SwsContext.h
         entities/StraightRoad.cpp ../include/client/StraightRoad.h entities/CurvedRoad.cpp ../include/client/CurvedRoad.h entities/Boost.cpp ../include/client/Boost.h entities/Heart.cpp ../include/client/Heart.h CarLivesDrawer.cpp ../include/client/CarLivesDrawer.h AIScript.cpp sdl_wrappers/SDLText.cpp ../include/client/SDLText.h entities/MudSplatter.cpp ../include/client/MudSplatter.h entities/Explotion.cpp ../include/client/Explotion.h entities/ExplotionFrameResolver.cpp ../include/client/ExplotionFrameResolver.h Client.cpp ../include/client/Client.h)
 
 target_link_libraries(client_test SDL2 SDL2_image SDL2_ttf SDL2_mixer)
 target_link_libraries(client_test Qt5::Widgets)
 target_link_libraries(client_test lua5.3)
+target_link_libraries(client_test avformat avcodec avutil swscale)
+
